상대주소 오류 해결

--- a/adminlte3/iframe.html
+++ b/adminlte3/iframe.html
@@ -223,7 +223,7 @@
     <!-- iframe.js -->
     <script type="module" src="./iframe.js?v=1"></script>
     <!-- SweetAlert2 -->
-    <script src="../../plugins/sweetalert2/sweetalert2.min.js"></script>
+    <script src="./plugins/sweetalert2/sweetalert2.min.js"></script>
     <!-- framework alert -->
     <script type="module" src="./framework/alert.js"></script>
 
