--- a/adminlte3/iframe.html
+++ b/adminlte3/iframe.html
@@ -41,7 +41,7 @@
             class="brand-image img-circle elevation-3"
             style="opacity: 0.8"
           /> -->
-          <span class="brand-text font-weight-light">타이틀</span>
+          <span class="brand-text font-weight-light">타이틀11111</span>
         </a>
 
         <!-- Sidebar -->
